<resources>
    <string name="app_name" translatable="false">Encrypted Notebook</string>
    <string name="kaydet" translatable="false">Save</string>
    <string name="duzenle" translatable="false">EDIT</string>
    <string name="baslik" translatable="false">Title</string>
    <string name="note" translatable="false">Your notes</string>
    <string name="sil" translatable="false">DELETE</string>
    <string name="baslangic" translatable="false">Enter your password and click on \"SIGN IN\".</string>
    <string name="sifrehintn3" translatable="false">Password</string>
    <string name="login" translatable="false">LOG IN</string>
    <string name="signin" translatable="false">SIGN IN</string>
    <string name="olustur" translatable="false">CREATE</string>
    <string name="iletisim" translatable="false">Contact Me</string>
    <string name="aes" translatable="false">Notebook Encrypted by AES-256</string>
    <string name="changemypw" translatable="false">Change My Password</string>
    <string name="email" translatable="false">E-mail address: turkerkizilcik@gmail.com</string>
    <string name="text" translatable="false">"I take your reviews really serious. You can write anything about the app (questions, bugs, recommendations, ANR’s, dissatisfactions). I will reply in hours. "</string>
    <string name="thanks" translatable="false">Thanks for using my app.</string>
    <string name="eskisifre" translatable="false">Current Password</string>
    <string name="yenisifre" translatable="false">New Password</string>
    <string name="yenisifreonay" translatable="false">Confirm New Password</string>
    <string name="notunuzkaydedildi" translatable="false">Your note is saved successfully.</string>
    <string name="notunuzkaydedilmedi" translatable="false">Your note couldn\'t be saved. Please try again.</string>
    <string name="notunuzsilindi" translatable="false">Your note is deleted successfully.</string>
    <string name="notunuzsilinmedi" translatable="false">Your note couldn\'t be deleted. Please try again.</string>
    <string name="notunuzduzenld" translatable="false"> Your note is changed successfully.</string>
    <string name="notunuzduzenmedi" translatable="false">Your note couldn\'t be changed. Please try again.</string>
    <string name="sifreeslesmedi" translatable="false">Your password doesn\'t match. Please try again.</string>
    <string name="sifreeslesti" translatable="false">Your password matches. You can sign in.</string>
    <string name="evet" translatable="false">Yes</string>
    <string name="hayir" translatable="false">No</string>
    <string name="eminmisiniz" translatable="false">Are you sure?</string>
    <string name="sifrenizkaydedilio" translatable="false">Your password is about to be saved. Do you confirm this process?</string>
    <string name="hosgeldin" translatable="false">Welcome to the Encrypted Notebook.</string>
    <string name="extrathingy" translatable="false">Your extra password hasn\'t been saved.</string>
    <string name="mything" translatable="false">Would you like to open a secret area in the app which you could enter with another password? If you click  “Yes” app is going  to open a button, click it. If you click “No” you will never see this message  again.</string>
    <string name="hopsifreolmadi" translatable="false">Your password couldn\'t be saved, you cant sign in.</string>
    <string name="sifrebosbirak" translatable="false">Password can\'t be blank.</string>
    <string name="sahtesifreblank" translatable="false">Second password can\'t be blank!</string>
    <string name="sahtesifregercek" translatable="false">Second password can\'t be same as the first!</string>
    <string name="sahtesifreonaylama" translatable="false">Your second password is going to be created. Do you confirm this process?</string>
    <string name="fakeapprove" translatable="false">Second password is saved, extra note area has been created.</string>
    <string name="fakereject" translatable="false">Second password isn\'t saved, extra note area couldn\'t be created.</string>
    <string name="safe" translatable="false">You are in the extra safe note area.</string>
    <string name="sifreblankolamaz" translatable="false">New password can\'t be blank!</string>
    <string name="confirmleyemedin" translatable="false">Passwords don\'t match.</string>
    <string name="eskisifreyanlis" translatable="false">You entered your old password incorrectly.</string>
    <string name="ayniolamaz" translatable="false">Your old password can\'t be the same as your new password.</string>
    <string name="hosgeldiniz" translatable="false">Welcome</string>
    <string name="Subject">Subject</string>
    <string name="Message" translatable="false">Message</string>
    <string name="Send" translatable="false">Send</string>
    <string name="Ayarlar" translatable="false">Report a Bug</string>
    <string name="TurkerAyarlar" translatable="false">Settings</string>
    <string name="yasasin">Hooray!</string>


    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="theme_preferences_key" translatable="false">theme_preferences_key</string>
    <string name="notification_preferences_key" translatable="false"></string>

</resources>