<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".Main2Activity">

    <EditText
        android:id="@+id/artNameText"
        android:layout_width="208dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="46dp"
        android:hint="@string/baslik"
        android:inputType="textPersonName"
        android:textSize="19dp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/painterNameText"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="75dp"
        android:gravity="start"
        android:hint="@string/note"
        android:inputType="textMultiLine|textPersonName"
        android:textAlignment="viewStart"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artNameText" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#fdfd96"
            android:fontFamily="sans-serif-condensed"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/kaydet"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#fdfd96"
            android:fontFamily="sans-serif-condensed"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="edit"
            android:text="@string/duzenle"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="#fdfd96"
            android:fontFamily="sans-serif-condensed"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="delete"
            android:text="@string/sil"
            android:textAllCaps="false"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="92dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="56dp"
        android:minLines="2"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/painterNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>