<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity3">

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/dark_blue"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:foregroundGravity="center"
        android:hint="@string/sifrehintn3"
        android:inputType="textPassword"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/fakeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:background="@drawable/elif"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/roboto_medium"
            android:onClick="login"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signinButton"
            android:layout_width="134dp"
            android:layout_height="50dp"
            android:background="@drawable/elif"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:onClick="signin"
            android:text="@string/signin"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/fakeButton"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:layout_marginBottom="57dp"
        android:layout_weight="1"
        android:background="@drawable/elif"
        android:backgroundTint="@color/dark_blue"
        android:fontFamily="@font/roboto_medium"
        android:onClick="fake"
        android:text="@string/olustur"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="21sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/hosgeldiniz"
        android:textAlignment="center"
        android:textColor="@color/dark_blue"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>




