<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".MainActivity4">

    <EditText
        android:id="@+id/artNameText"
        android:layout_width="260dp"
        android:layout_height="46dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="121dp"
        android:hint="@string/baslik"
        android:inputType="textPersonName"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/dark_blue"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:textSize="19dp"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/painterNameText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="75dp"
        android:background="@drawable/custom_input"
        android:backgroundTint="@color/dark_blue"
        android:drawablePadding="12dp"
        android:gravity="start"
        android:hint="@string/note"
        android:inputType="textMultiLine|textPersonName"
        android:paddingStart="12dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="19dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/artNameText" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="125dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/elif"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/roboto_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="save"
            android:text="@string/kaydet"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/elif"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/roboto_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="edit"
            android:text="@string/duzenle"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@drawable/elif"
            android:backgroundTint="@color/dark_blue"
            android:fontFamily="@font/roboto_medium"
            android:foregroundGravity="center"
            android:gravity="center"
            android:onClick="delete"
            android:text="@string/sil"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>