<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background3"
    tools:context=".MainActivity7">

    <EditText
        android:id="@+id/EditTextSimdi"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="67dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/eskisifre"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextYeni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditTextYeni"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="39dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/yenisifre"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/EditTextYeniConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextSimdi" />

    <EditText
        android:id="@+id/EditTextYeniConfirm"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginStart="68dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="150dp"
        android:background="@drawable/custom_input"
        android:drawableStart="@drawable/custom_lock_open"
        android:drawablePadding="12dp"
        android:ems="10"
        android:hint="@string/yenisifreonay"
        android:inputType="textPersonName"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextYeni" />

    <Button
        android:id="@+id/button4"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginBottom="143dp"
        android:background="#fdfd96"
        android:fontFamily="sans-serif-condensed"
        android:foregroundGravity="center"
        android:gravity="center"
        android:onClick="saving"
        android:text="@string/kaydet"
        android:textAlignment="center"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditTextYeniConfirm" />

</androidx.constraintlayout.widget.ConstraintLayout>